# kube-vault-rs

./: .travis.yml  Cargo.toml  Makefile  README.md
ci/: before_deploy.sh
kube-vault/: Cargo.toml
kube-vault/src/: chart.rs  export.rs  generate.rs  haystack.rs  main.rs  verify.rs
kube-vault/templates/: secret.yaml
vault/: Cargo.toml
vault/src/: api.rs  auth.rs  client.rs  error.rs  lib.rs
