[package]
name = "vault"
version = "0.1.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.9.20", default_features = false, features = ["rustls-tls"] }
failure = "0.1.5"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
chrono = "0.4.9"
lazy_static = "1.4.0"
